public/assets/stylesheets/main.css
/* ... */
/* Carousel Overlay */
.carousel-overlay {
  position: absolute;
  bottom: 100px;
  right: 0;
  left: 0;
}
.z-index-0 {
  z-index: 0;
}
.z-index-10 {
  z-index: 10;
}
.z-index-1000 {
  z-index: 1000;
}
.navbar-default .navbar-brand {
  color: rgb(28, 138, 251);
}
.navbar-default .navbar-brand:hover {
  color: rgb(28, 138, 251);
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #ffffff;
  background-image: none;
  background-color: rgba(18, 133, 227, 0.30);
  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.5) inset, 0 0 1px rgba(255, 255, 255, 0.5) inset;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #ffffff;
  background-color: rgba(18, 133, 227, 0.30);
  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.5) inset, 0 0 1px rgba(255, 255, 255, 0.5) inset;
}
.navbar-collapse.in {
  background-color: rgba(255,255,255,.5);
}
.navbar-default .navbar-toggle {
  border-color: transparent;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: rgba(8, 82, 180, 0.50);
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #ffffff;
}
.navbar-toggle {
  padding: 9px 10px;
  margin-top: 8px;
  margin-right: 15px;
  margin-bottom: 8px;
  color: #fff;
}
.carousel-overlay {
  color: #ffffff;
  text-shadow:
    1px  1px 2px black,
    1px -1px 2px black,
    -1px  1px 2px black,
    -1px -1px 2px black;
}
.carousel-overlay h1::selection {
  background: rgba(8, 82, 180, 0.20);
}
.carousel-overlay h1::-moz-selection {
  background: rgba(8, 82, 180, 0.20);
}
.carousel-overlay .lead::selection {
  background: rgba(8, 82, 180, 0.20);
}
.carousel-overlay .lead::-moz-selection {
  background: rgba(8, 82, 180, 0.20);
}
.carousel-wrapper {
  width: 85%;
  margin-right: auto;
  margin-left: auto;
  color: #000000;
  background-color: #000000;
}
.carousel-container {
  width: 100%;
  color: #000000;
  background-color: #000000;
  box-shadow: 0 0 11px #000000;
}
.logo {
  background-image: url(../images/SpartaParkLogoWhite.png);
  background-size: 168px 40px;
  background-repeat: no-repeat;
  background-position: center center;
  width: 168px;
  height: 40px;
  margin: 0;
  padding: 0;
}
.errors {
  color: red;
  margin-bottom: 30px;
}
.contact-form-center {
  margin-right: auto;
  margin-left: auto;
}
.textarea-style {
  width: 100%;
  border-radius: 4px;
  border: 1px solid #b3b3b3;
}
.textarea-style:focus {
  background-color: #fff;
  border: 1px solid rgba(0, 80, 243, 0.6);

  -webkit-box-shadow: 0 1 10px rgba(0, 69, 163, 0.57);
  -moz-box-shadow: 0 1 10px rgba(0, 69, 163, 0.57);
  box-shadow: 0 1px 10px rgba(0, 69, 163, 0.57), 0 1px 0 #FFF inset;
}
.text-field-style {
  width: 90%;
}
.alert {
  text-align: center;
}
.page-header {
  margin: auto;
  text-align: center;
}
.contact-form-title {
  text-shadow: 2px 2px 2px rgba(0, 69, 163, 0.80);
  text-align: center;
  line-height: 1.5;
}
.btn-style {
  border-radius: 4px;
  background: rgba(0, 69, 163, 1.0);
  border: 1px solid #0041A9;
  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.5) inset, 0 0 1px rgba(255, 255, 255, 0.5) inset;
  color: #FFF !important;
  opacity: 1;
  width: 100px;
  padding-top: 9px;
  font-weight: bold;
  text-transform: uppercase;
}
.btn-style:hover {
  background: rgb(0, 84, 221);
}
.btn-default {
  text-transform: uppercase;
}
div.content-wrapper.content-wrapper-navbar-push > div#map_canvas {
  height: 100%;
}
.team-member-image {
  background-image: url(../images/me.png);
  background-size: 200px 200px;
  background-repeat: no-repeat;
  background-position: center center;
  width: 200px;
  height: 200px;
  margin: 0;
  padding: 0
}
.thumbnail {
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 60px;
  padding: 15px;
  width: -moz-fit-content;
  box-shadow: 0 1px 10px #A7A7A7, 0 1px 0 #FFF inset;
  border: 1px solid #B3B3B3;
  background: none repeat scroll 0 0 #fcfcfc;
  display: table;
  position: relative;
  z-index: 1000;
}
.thumbnail:hover {
  box-shadow: 0 1px 10px rgba(0, 69, 163, 0.57), 0 1px 0 #FFF inset;
  border: 1px solid rgba(0, 80, 243, 0.6);
  z-index: 1001;
}
.thumbnail, .img-thumbnail {
  border-radius: 10px;
}
.img-thumbnail {
  display: block;
}
.about-title {
  line-height: 1.5;
  margin-bottom: 30px;
}
.about-text {
  margin-bottom: 30px;
}
.team-member-name {
  margin-left: -8px;
  color: #000000;
  font-weight: bold;
  text-transform: capitalize;
}
.team-member-position {
  width: 180px;
  margin-left: -7px;
  margin-top: -7px;
  font-size: 13px;
  color: #989898;
}
.nav-pills > li.active > a {
  background: rgba(0, 69, 163, 0.80);
  border: 1px solid #0041A9;
  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.5) inset, 0 0 1px rgba(255, 255, 255, 0.5) inset;
  text-transform: uppercase;
  text-shadow: 1px 1px 1px rgba(0,0,0,.75);
  font-weight: bold;
}
.nav-pills > li > a {
  background: rgba(255, 255, 255, 0.100);
  border: 1px solid rgba(201, 201, 201, 0.32);
  box-shadow: 0 3px 5px rgba(232, 232, 232, 0.50) inset, 0 0 1px rgba(232, 232, 232, 0.5) inset;
  text-transform: uppercase;
  text-shadow: 1px 1px 1px rgba(0,0,0,.5);
  font-weight: bold;
  color: rgba(0, 69, 163, 0.80);
  text-align: center;
}
.nav-pills > li > a:hover {
  background: rgba(132, 132, 132, 0.08);
  border: 1px solid rgba(201, 201, 201, 0.32);
  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.5) inset, 0 0 1px rgba(255, 255, 255, 0.5) inset;
  text-transform: uppercase;
  text-shadow: 1px 1px 1px rgba(0,0,0,.5);
  font-weight: bold;
  color: rgba(0, 69, 163, 0.80);
}
.col-premd-1, .col-premd-2, .col-premd-3, .col-premd-4, .col-premd-5, .col-premd-6, .col-premd-7, .col-premd-8, .col-premd-9, .col-premd-10, .col-premd-11, .col-premd-12 {
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
}
/* ... */

